--- a/3-TRIMESTRE-JuliaMessagi-main/REDES SOCIAIS/STYLE.CSS
+++ b/3-TRIMESTRE-JuliaMessagi-main/REDES SOCIAIS/STYLE.CSS
@@ -4,10 +4,33 @@ html{
     background-color: white;
     font-family: "Nunito Sans";
     display: flex;
-    height: 100vh;
+    height: auto;
     justify-content: center;
 }
 body {
     background-color: #000000;
     color: #FFFFFF;
+    border-radius: 5px;
+}
+header{
+    background-color: gainsboro;
+    color: black;
+    border-radius: 5px 5px 0 0;
+    padding: 10px 10px 0 10px;
+}
+main{
+    background-color: gainsboro;
+    color: black;
+    padding: 0px 10px 0 10px;
+}
+footer{
+    background-color: gainsboro;
+    color: black;
+    padding: 0 0 0 10px;
+    border-radius: 0 0 5px 5px;
+    text-align: right;
+    font-size: 8px;
+}
+a:hover{
+    font-size: 14px;
 }
